language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_let_assert_alias_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let assert 10 as ten = 10\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert 10 as ten = 10
      ▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
pub fn main() {
  let ten = case 10 {
    10 as ten -> ten
    _ -> panic
  }
}
