language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_let_assert_string_prefix_pattern_alias_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert \"123\" as one_two_three <> rest = \"123456\"\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert "123" as one_two_three <> rest = "123456"
                ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑      
}


----- AFTER ACTION
pub fn main() {
    let #(one_two_three, rest) = case "123456" {
      "123" as one_two_three <> rest -> #(one_two_three, rest)
      _ -> panic
    }
}
