language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_let_assert_to_case_indented.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  {\n    let assert Ok(value) = Ok(1)\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  {
    let assert Ok(value) = Ok(1)
               ↑                
  }
}


----- AFTER ACTION
pub fn main() {
  {
    let value = case Ok(1) {
      Ok(value) -> value
      _ -> panic
    }
  }
}
