language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_let_assert_to_case_multi_variables.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let assert [var1, var2, _var3, var4] = [1, 2, 3, 4]\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert [var1, var2, _var3, var4] = [1, 2, 3, 4]
              ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑                       
}


----- AFTER ACTION
pub fn main() {
  let #(var1, var2, var4) = case [1, 2, 3, 4] {
    [var1, var2, _var3, var4] -> #(var1, var2, var4)
    _ -> panic
  }
}
