language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_let_assert_to_case_no_variables.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let assert [] = []\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert [] = []
             ↑      
}


----- AFTER ACTION
pub fn main() {
  let _ = case [] {
    [] -> Nil
    _ -> panic
  }
}
