language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_let_assert_with_message_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn expect(value, message) {\n  let assert Ok(inner) = value as message\n  inner\n}\n"
---
----- BEFORE ACTION

pub fn expect(value, message) {
  let assert Ok(inner) = value as message
      ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑                 
  inner
}


----- AFTER ACTION

pub fn expect(value, message) {
  let inner = case value {
    Ok(inner) -> inner
    _ -> panic as message
  }
  inner
}
